# Nust-C

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  coding_style.md  nct.out  nct.out_debug
include/: error.h  error_codes.h  main.h  utf8_compatibility.h  utils.h
include/front-end/: lexer.h  token.h
install/: linux.sh
lib/ncp/math/: decimal_math.nc  math.nc  math_defines.nc  precise_math.nc
lib/std/: bitfield.ns  exception.nc  exception.ns  io.nc  io.ns  math.nc  std.nc  std.ns  string.nc  string.ns
lib/std/math/: decimal_math.nc  decimal_math.nust  math.nc  math.ns  math.nustc  math_defines.nc  math_defines.nust  precise_math.nc  precise_math.ns  precise_math.nust
src/: error.c  main.c  utf8_compatibility.c  utils.c
src/compiler/front-end/: AST.c  compiler.c  lexer.c  namespace.c  symbol_table.c  syntaxer.c  token.c
src/compiler/front-end/headers/: AST.h  NIR.h  compiler.h  lexer.h  namespace.h  symbol_table.h  syntaxer.h  token.h
src/front-end/: AST.c  compiler.c  lexer.c  token.c
src/front-end/headers/: compiler.h
src/headers/: error_codes.h  main.h  utf8_compatibility.h  utils.h
tests/: test.c
tests/logics/syntaxer/: a.out  synyaxer.c
tests/logics/utf-8/: Makefile  unit_test.c
tests/logics/utf-8/headers/: utf-8_algorithm_test.h
tests/nustc/basics/: basic_file.nc  functions.nc  operations.nc
tests/utf-8/: utf-8_algorithm_test.c  utf8_test
